# RayCaster

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile  LICENSE  README.md
cmake/: BaseConfig.cmake  CoverageConfig.cmake  DocumentationConfig.cmake  qt.cmake
data/: settings.json
data/maps/: E1L1.map  E1L1_v1.map
document/: BasicRaycaster.md
document/RayCaster3DSage/: Readme.md
document/RayCaster3DSage/3DSage_Raycaster_v1/: 3DSage_Raycaster_v1.c  README.md
document/RayCaster3DSage/3DSage_Raycaster_v2/: 3DSage_Raycaster_v2.c  README.md
document/RayCaster3DSage/3DSage_Raycaster_v3/: 3DSage_Raycaster_v3.c  LICENSE
document/images/: source_images.pptx  ~$source_images.pptx
source/: CMakeLists.txt  main.cpp
source/rc/base/: Engine.cpp  Engine.h  Map.cpp  Map.h  Player.cpp  Player.h
source/rc/base/renderer/: BaseRenderer.cpp  BaseRenderer.h  NullRenderer.cpp  NullRenderer.h  OpenGlRenderer.cpp  OpenGlRenderer.h
source/rc/core/: Engine.cpp  Engine.h  Map.cpp  Map.h  Player.cpp  Player.h
source/rc/core/fs/: DataFile.cpp  DataFile.h  MapFile.cpp  MapFile.h
source/rc/core/input/: BaseInput.cpp  BaseInput.h  GlInput.cpp  GlInput.h
source/rc/core/renderer/: BaseRenderer.cpp  BaseRenderer.h  NullRenderer.cpp  NullRenderer.h  OpenGlRenderer.cpp  OpenGlRenderer.h
source/rc/core/tool/: Tracker.cpp  Tracker.h
source/rc/game/: Map.cpp  Map.h  Player.cpp  Player.h
source/rc/graphics/: Box2.cpp  Box2.h  Color.h  Line2.h  Quad2.h
source/rc/graphics/image/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
source/rc/graphics/renderer/: BaseRenderer.cpp  BaseRenderer.h  NullRenderer.cpp  NullRenderer.h  OpenGlRenderer.cpp  OpenGlRenderer.h
source/rc/math/: Angle.cpp  Angle.h  Vector2.h  functions.h
source/rc/math/geometry/: Angle.cpp  Angle.h  Box2.h  Line2.h  Quad2.h  Vector2.h  Vector3.h
sourceWorldEditor/: CMakeLists.txt  main.cpp
sourceWorldEditor/resources/: WorldEditor.rc  swe.qrc
sourceWorldEditor/we/: MainWindow.cpp  MainWindow.h  NewMap.cpp  NewMap.h  RenderArea.cpp  RenderArea.h  TableCell.cpp  TableCell.h  TableMap.cpp  TableMap.h
sourceWorldEditor/we/ui/: MainWindow.ui  NewMap.ui
test/: CMakeLists.txt
test/base_tests/: engine_test.cpp  map_test.cpp  player_test.cpp
test/core_tests/: engine_test.cpp  file_test.cpp  input_test.cpp  map_test.cpp  player_test.cpp
test/game_tests/: map_test.cpp  player_test.cpp
test/graphics_tests/: box2_test.cpp  color_test.cpp  line2_test.cpp  main.cpp  quad2_test.cpp  texture_test.cpp  texturemanager_test.cpp
test/math_tests/: angle_test.cpp  box2_test.cpp  line2_test.cpp  quad2_test.cpp  vector2_test.cpp
test/test_helper/: TestMainHelper.h  testHelper.h
